Fix scrolling issue with header on iOS

--- a/app/assets/stylesheets/base/_defaults.scss
+++ b/app/assets/stylesheets/base/_defaults.scss
@@ -1,3 +1,7 @@
-body {
+body,
+html {
+  @include size(100vw, 100vh);
   background-color: $base-background-color;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
